
[workspace]
resolver = "2"
members = [
    "wapo",
    "wapod",
    "wapo-host",
    "wapo-macro",
    "wapo-env",
    "wapod-rpc",
    "wapo-run",
    "wapod-crypto",
    "wapod-crypto-types",
    "e2e/guest",
    "phaxt",
    "examples/http-server",
    "examples/http-client",
    "examples/tokio-rustls-server",
    "examples/tokio-rustls-client",
    "sni-tls-listener",
]
exclude = ["wapod-pherry"]

[profile.release]
panic = "abort"
