
[workspace]
resolver = "2"
members = [
    "wapo",
    "wapod",
    "wapo-host",
    "wapo-macro",
    "wapo-env",
    "wapod-rpc",
    "wapo-run",
    "wapod-crypto",
    "wapod-crypto-types",
    "e2e/guest",
    "phaxt",
    "sni-tls-listener",
    "examples/http-server",
    "examples/http-client",
    "examples/tokio-rustls-server",
    "examples/tokio-rustls-client",
    "examples/sni-tls-server",
    "examples/benchmark",
    "httptime",
]
exclude = ["wapod-pherry"]

[profile.release]
panic = "abort"
