[package]
name = "httptime"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
http-body-util = "0.1.2"
httpdate = "1.0.3"
hyper = { version = "1.3.1", features = ["http1", "client"] }

[target.'cfg(target_os = "wasi")'.dependencies]
wapo = { version = "0.1.1", path = "../wapo" }

[target.'cfg(not(target_os = "wasi"))'.dependencies]
reqwest = "0.12.5"

[dev-dependencies]
futures = "0.3.30"
tokio = { version = "1.16.1", features = ["full"] }
