[package]
name = "phaxt"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
hex = "0.4.3"
jsonrpsee = "0.22.5"
primitive-types = "0.12.2"
scale = { version = "3.6.12", package = "parity-scale-codec" }
scale-encode = "0.7.1"
scale-info = "2.11.3"
serde = "1.0.202"
serde_json = "1.0.117"
sp-core = "33.0.0"
sp-runtime = "37.0.0"
subxt = "0.37.0"
tokio = "1.37.0"
tracing = "0.1.40"

[build-dependencies]
scale = { version = "3.6.12", package = "parity-scale-codec" }
subxt-codegen = "0.37"
syn = "2"
