[package]
name = "sni-tls-listener"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
tracing = "0.1.27"
tokio = { version = "1.16.1", features = ["full"] }
rustls = { version = "0.23.9", default-features = false }
tokio-rustls = { version = "0.26.0", default-features = false, features = ["tls12"] }
rustls-pemfile = "2"
rustls-pki-types = "1"
webpki-roots = "0.26.3"

[features]
ring = ["rustls/ring"]
aws_lc_rs = ["rustls/aws_lc_rs"]
