[package]
description = "The low level protocol between wapo guest and host"
homepage = "https://github.com/Phala-Network/wapo"
license = "Apache-2.0"
edition = "2021"
name = "wapo-env"
version = "0.1.0"

[dependencies]
wapo-macro = { version = "0.1.0", path = "../wapo-macro" }

derive_more = "0.99.17"
num_enum = "0.7.2"
scale = { package = "parity-scale-codec", version = "3.6.5", default-features = false, features = [
    "derive",
    "std",
] }
tinyvec = { version = "1.5.1", features = ["alloc"] }
log = "0.4.16"
futures = "0.3"
wiggle = { version = "19.0.1", optional = true }

[features]
default = ["host"]
host = ["wiggle"]
