[package]
description = "The runtime that runs wapo program"
license = "Apache-2.0"
homepage = "https://github.com/Phala-Network/wapo"
edition = "2021"
name = "wapo-host"
version = "0.1.0"

[dependencies.wasmtime]
version = "19.0.1"
default-features = false
features = [
    "runtime",
    "winch",
    "cranelift",
    "async",
    "demangle",
]
[dependencies.wiggle]
version = "19.0.1"
features = ["wasmtime"]

[dependencies.wasi-common]
version = "19.0.1"

[dependencies]
anyhow = "1.0.69"
dashmap = "5.2.0"
futures = "0.3"
hex_fmt = "0.3.0"
log = "0.4.16"
tracing = "0.1"
wapo-env = { version = "0.1.0", path = "../wapo-env", features = ["host"] }
tokio = { version = "1.24.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.5"
thiserror = "1"
libc = "0.2"
scale = { version = "3.6.5", package = "parity-scale-codec" }
tokio-rustls = "0.23"
rustls-pemfile = "1"
webpki-roots = "0.22"
once_cell = "1"
phala-tokio-proxy = "0.1.0"
page_size = "0.6.0"
phala-scheduler = "0.1"
derive_more = "0.99.17"
rocket = { version = "0.5.0", optional = true }
hickory-resolver = { version = "0.24.0", features = ["tokio"] }

[features]
default = ["rocket-stream"]
rocket-stream = ["rocket"]
