[package]
description = "Macros for writing wapo program"
homepage = "https://github.com/Phala-Network/phala-blockchain"
license = "Apache-2.0"
edition = "2021"
keywords = ["phat-contract", "webassambly", "runtime", "wapo"]
name = "wapo-macro"
version = "0.1.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full", "visit-mut", "extra-traits", "parsing"] }
heck = "0.5.0"
proc-macro-crate = "3.1.0"

[dev-dependencies]
insta = "1.14.0"
rustfmt-snippet = "0.1.2"
