[package]
description = "The wapo SDK"
license = "Apache-2.0"
homepage = "https://github.com/Phala-Network/wapo"
edition = "2021"
name = "wapo"
version = "0.1.1"

[dependencies]
wapo-env = { version = "0.1.0", path = "../wapo-env", default-features = false }
wapo-macro = { version = "0.1.0", path = "../wapo-macro" }
log = "0.4.16"
derive_more = "0.99"

hyper = { version = "0.14.18", features = ["server", "client"], optional = true }
tokio = { version = "1", optional = true }
futures = "0.3"
scale = { version = "3.6.5", package = "parity-scale-codec" }
pin-project = "1"
lazy_static = "1"

[features]
default = ["hyper", "tokio"]
