[package]
description = "The wapo SDK"
license = "Apache-2.0"
homepage = "https://github.com/Phala-Network/wapo"
edition = "2021"
name = "wapo"
version = "0.1.1"

[dependencies]
wapo-env = { version = "0.1.0", path = "../wapo-env", default-features = false }
wapo-macro = { version = "0.1.0", path = "../wapo-macro" }
log = { version = "0.4.16", features = ["std"] }
derive_more = "0.99"

# For hyper 0.14 support
hyper-v0 = { version = "0.14.28", package = "hyper", features = ["server", "client"], optional = true }

# For hyper 1.0 support
hyper = { version = "1.2.0", optional = true, features = ["server", "client", "http1"] }
tower-service = { version = "0.3.2", optional = true }

tokio = { version = "1", optional = true }
futures = "0.3"
scale = { version = "3.6.5", package = "parity-scale-codec" }
pin-project = "1"
lazy_static = "1"
env_filter = { version = "0.1.0", default-features = false }

[features]
default = ["full"]
full = ["hyper-v0", "hyper-v1", "tokio", "tower"]
hyper-v1 = ["dep:hyper", "tokio"]
tower = ["dep:tower-service", "hyper-v1"]
