[package]
name = "wapod-crypto-types"
version = "0.1.0"
edition = "2021"

[dependencies]
scale = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
scale-info = { version = "2.0.0", default-features = false }

[features]
default = ["std"]
std = [
    "scale/std",
    "scale-info/std",
]