[package]
name = "wapod-crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
scale = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
scale-info = { version = "2.0.0", default-features = false }

sp-core = { version = "32.0.0", default-features = false, optional = true }
ring = { version = "0.17.8", default-features = false, optional = true }
curve25519-dalek = { version = "4.1.2", default-features = false, optional = true }
schnorrkel = { version = "0.11.4", default-features = false, optional = true }
rand = { version = "0.8.5", default-features = false, optional = true }
wapod-crypto-types = { path = "../wapod-crypto-types", version = "0.1.0" }

[features]
default = ["std", "crypto"]
std = [
    "scale/std",
    "scale-info/std",
    "rand?/std",
    "sp-core?/std",
    "ring?/std",
    "schnorrkel?/std",
    "wapod-crypto-types/std",
]
crypto = ["sp-core", "ring", "curve25519-dalek", "schnorrkel", "rand"]
