[package]
name = "wapod-crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
scale = { package = "parity-scale-codec", version = "3.0.0" }
scale-info = "2.0.0"
sp-core = "32.0.0"
ring = "0.17.8"
curve25519-dalek = "4.1.2"
schnorrkel = "0.11.4"
rand = "0.8.5"
wapod-crypto-types = { path = "../wapod-crypto-types", version = "0.1.0" }
thiserror = "1.0.61"
derive_more = "0.99.17"
