[package]
name = "wapod-pherry"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
phaxt = { path = "../phaxt" }
wapod-rpc = { path = "../wapod-rpc" }
reqwest = "0.12.4"
anyhow = "1.0.86"
sp-core = "33.0.0"
sgx-attestation = { git = "https://github.com/Phala-Network/phala-blockchain.git" }

rustls-pki-types = "=0.2.1"
scale = { version = "3.6.12", package = "parity-scale-codec" }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
