[package]
name = "wapod-rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
prpc = { version = "0.2", path = "../prpc/prpc" }
prost = "0.12.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
scale = { package = "parity-scale-codec", version = "3" }

[build-dependencies]
prpc-build = { version = "0.2", path = "../prpc/prpc-build" }
