[package]
name = "wapod-types"
version = "0.1.0-dev.1"
edition = "2021"

description = "Types for wapod interface"
license = "Apache-2.0"
homepage = "https://github.com/Phala-Network/wapo"

[dependencies]
scale = { version = "3.6.12", package = "parity-scale-codec", default-features = false, features = ["max-encoded-len"]}
scale-info = { version = "2.11.3", default-features = false, features = ["derive"] }
serde = { version = "1.0.203", default-features = false, features = ["derive"] }

[features]
default = ["std"]
std = [
    "scale/std",
    "scale-info/std",
    "serde/std",
]
