[package]
edition = "2021"
name = "wapod"
version = "0.1.0"

[dependencies]
wapo-host = { version = "0.1.0", path = "../wapo-host" }
wapod-rpc = { version = "0.1.0", path = "../wapod-rpc" }
tokio = { version = "1.17.0", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
anyhow = "1.0.69"
clap = { version = "4.0.32", features = ["derive"] }
rocket = "0.5.0"
sp-core = "32.0.0"
serde_json = "1.0"
tracing = "0.1"
phala-rocket-middleware = "0.1.0"
rocket_cors = "0.6.0"
