[package]
edition = "2021"
name = "wapod"
version = "0.1.0"

[dependencies]
wapo-host = { version = "0.1.0", path = "../wapo-host" }
wapod-rpc = { version = "0.1.0", path = "../wapod-rpc" }
wapod-crypto = { version = "0.1.0", path = "../wapod-crypto" }
tokio = { version = "1.17.0", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
anyhow = "1.0.69"
clap = { version = "4.0.32", features = ["derive"] }
rocket = "0.5.0"
sp-core = "32.0.0"
serde_json = "1.0"
tracing = "0.1"
phala-rocket-middleware = "0.1.1"
rocket_cors = "0.6.0"
hex = "0.4"
uuid = { version = "1.8.0", features = ["v4"] }
sha2 = "0.10.8"
scopeguard = "1.2.0"
hex_fmt = "0.3.0"
scale = { package = "parity-scale-codec", version = "3" }
rand = "0.8.5"
phala-allocator = "0.1.0"
memory-stats = { version = "1.1.0", features = ["always_use_statm"] }
parse-size = { version = "1.0.0", features = ["std"] }
typed-builder = "0.18.2"
