[package]
edition = "2021"
name = "httpserver-demo"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
hyper = { version = "0.14.18", features = ["server", "http1"] }
log = "0.4.16"
once_cell = "1.10.0"
wapo = { version = "0.1", path = "../../wapo" }
tokio = { version = "1", features = ["macros"] }
